prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  labels:
    app: prometheus
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
    name: service
  selector:
    app: prometheus
