prometheus/debug-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        backend:
          serviceName: prometheus-service
          servicePort: 9090
